src/test/ui/error-codes/E0010.stderr
error[E0010]: allocations are not allowed in constants
  --> $DIR/E0010.rs:4:24
   |
LL | const CON : Box<i32> = box 0;
   |                        ^^^^^ allocation not allowed in constants

error[E0019]: constant contains unimplemented expression type
  --> $DIR/E0010.rs:4:28
   |
LL | const CON : Box<i32> = box 0;
   |                            ^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0010, E0019.
For more information about an error, try `rustc --explain E0010`.
